<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/user_options">

        <item
            android:id="@+id/nav_customers"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_customers" />
        <item
            android:id="@+id/nav_residents"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_residents" />
        <item
            android:id="@+id/nav_visitors"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_visitors" />
        <item
            android:id="@+id/nav_guards"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_guards" />
        <item
            android:id="@+id/nav_registry"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_registry"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/text_profile"/>

    </group>

</menu>
