<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_edit_text_customer_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_id"
                android:inputType="number"
                android:fontFamily="sans-serif"
                android:layout_marginTop="16dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/add_edit_text_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:fontFamily="sans-serif"
                android:layout_marginTop="16dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/add_edit_text_customer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_address"
                android:fontFamily="sans-serif"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/add_button_customer_commit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_ready"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/flatui_clouds"
                android:background="@color/flatui_alizarin" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>