<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tiaki.app.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:id="@+id/img_login"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/ic_user" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_toEndOf="@id/img_login"
                        android:layout_marginTop="25dp"
                        android:textSize="30dp"
                        android:textColor="@color/flatui_midnight_blue"
                        android:text="@string/text_login"/>

                </RelativeLayout>

            <EditText
                android:id="@+id/edit_text_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user"
                android:fontFamily="sans-serif"
                android:layout_marginTop="16dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:layout_marginTop="5dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_sign"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_sign_in"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="@color/flatui_clouds"
                android:background="@color/flatui_alizarin" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>